# GPRF-Query-Expansion-project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
configs/: default.yaml
examples/: basic_usage.py
scripts/: run_evaluation.py
src/gprf/: __init__.py
src/gprf/core/: __init__.py  expanders.py  generators.py  retrievers.py
src/gprf/utils/: config.py  evaluation.py
tests/: conftest.py
tests/unit/: test_generators.py
